--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "check": "tsc --noEmit",
+    "debug": "cross-env NODE_OPTIONS='--inspect' NODE_ENV=development next dev",
     "dev": "cross-env NODE_ENV=development run-s next:dev",
     "eslint:fix": "npm run eslint:template -- --fix .",
     "eslint:individual": "npm run eslint:template -- --fix",
@@ -38,7 +39,7 @@
     "framer-motion": "^10.12.23",
     "googleapis": "^126.0.1",
     "mysql2": "^3.3.3",
-    "next": "^13.4.4",
+    "next": "^13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "^8.4.23",
     "prisma": "^5.2.0",
