feat: fixed linter errors, prepared for opensource

--- a/package.json
+++ b/package.json
@@ -3,31 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "check": "tsc --noEmit",
-    "debug": "cross-env NODE_OPTIONS='--inspect' NODE_ENV=development next dev",
     "dev": "cross-env NODE_ENV=development run-s next:dev",
+    "debug": "cross-env NODE_ENV=development NODE_OPTIONS='--inspect'  next dev",
+    "production": "cross-env NODE_ENV=production run-s build start",
+    "build": "cross-env NODE_ENV=production npm run next:build",
+    "start": "cross-env NODE_ENV=production npm run next:start",
+    "check": "tsc --noEmit",
+    "fix": "run-s prettier:fix eslint:fix",
+    "lint": "run-s prettier:report eslint:report",
+    "export": "cross-env NODE_ENV=production run-s next:export",
+    "new": "run-s prisma:reset prisma:push prisma:generate",
     "eslint:fix": "npm run eslint:template -- --fix .",
     "eslint:individual": "npm run eslint:template -- --fix",
     "eslint:report": "npm run eslint:template -- --max-warnings 0 .",
     "eslint:template": "eslint --cache --report-unused-disable-directives --no-error-on-unmatched-pattern --ext .tsx,.ts,.jsx,.js,.mjs,.cjs",
-    "export": "cross-env NODE_ENV=production run-s next:export",
-    "fix": "run-s prettier:fix eslint:fix",
-    "lint": "run-s prettier:report eslint:report",
-    "new": "run-s prisma:reset prisma:push prisma:generate",
     "next:build": "next build",
     "next:dev": "next dev",
     "next:export": "next export",
-    "next:start": "next start -p 8105",
+    "next:start": "next start -p 8080",
     "prettier:fix": "npm run prettier:individual -- .",
     "prettier:individual": "npm run prettier:template -- --write",
     "prettier:report": "npm run prettier:template -- --check .",
-    "prettier:template": "prettier --plugin-search-dir=. --ignore-unknown",
+    "prettier:template": "prettier  --ignore-unknown",
     "prisma:generate": "prisma generate",
     "prisma:push": "prisma db push --skip-generate",
     "prisma:reset": "prisma migrate reset --skip-generate --skip-seed --force",
     "prisma:studio": "prisma studio",
-    "production": "cross-env NODE_ENV=production run-s build start",
-    "start": "cross-env NODE_ENV=production npm run next:start",
     "openapi:generate:spotify": "openapi-generator-cli generate -i ./openapi/open-api-schema.yaml -g typescript-axios -o ./src/lib/spotify/generated --additional-properties=supportsES6=true"
   },
   "dependencies": {
@@ -36,7 +37,6 @@
     "@prisma/client": "^5.2.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.5.0",
-    "daisyui": "^3.6.4",
     "framer-motion": "^10.12.23",
     "googleapis": "^126.0.1",
     "next": "^13.4.7",
