--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,9 @@ typings/
 
 # dotenv environment variables file
 .env.test
+.env.development
+.env.production
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -104,5 +107,3 @@ dist
 
 
 /.idea
-
-.env.local
