--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@prisma/client": "^5.2.0",
 		"autoprefixer": "^10.4.14",
 		"axios": "^1.5.0",
+		"axios-retry": "^3.8.0",
 		"framer-motion": "^10.12.23",
 		"googleapis": "^126.0.1",
 		"next": "^13.4.7",
