--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"axios-retry": "^3.8.0",
 		"framer-motion": "^10.12.23",
 		"googleapis": "^126.0.1",
+		"msw": "^2.0.8",
 		"next": "^13.4.7",
 		"next-auth": "^4.22.1",
 		"postcss": "^8.4.23",
