--- a/.eslintignore
+++ b/.eslintignore
@@ -4,7 +4,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,node,linux,react,macos,dotenv,windows,visualstudiocode
 
 ### dotenv ###
-.env.local
+.env.development
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -143,7 +143,7 @@ web_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
+.env.development
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -267,7 +267,7 @@ $RECYCLE.BIN/
 # === End of generated rules ===
 # === Start of generic rules ===
 
-.env.local
+.env.development
 /db/main.db
 
 # === End of generic rules ===
