--- a/.gitignore
+++ b/.gitignore
@@ -72,7 +72,7 @@ typings/
 .env.test
 .env.development
 .env.production
-.env.local
+.env.development
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
